# StrataDB

./: .gitignore  CMakeLists.txt  README.md
docs/: btree_design.md  storage_layer.md
include/execution/: executor.h
include/index/: btree.h  node.h
include/query/: ast.h  parser.h
include/storage/: disk_manager.h
src/: demo.cpp  main.cpp
src/execution/: executor.cpp  executor.h
src/index/: btree.cpp  node.cpp
src/query/: ast.h  parser.cpp
src/storage/: disk_manager.cpp  disk_manager.h
tests/: tests.cpp
